# ekranoplano_v4-OTHER_CONTROLLER

./: altitud_fuzzy.fis  bloques_estables.txt  codigo_funciones_matlab.txt  conexiones_estables.txt  goto_from_tags_estables.txt  main_FUZZY_v4.m  pitch_fuzzy.fis  roll_fuzzy.fis  throttle_fuzzy.fis  yaw_fuzzy.fis
v4_fuzzy/: CMakeLists.txt  package.xml  packageInfo.mat
v4_fuzzy/include/v4_fuzzy/: V4_FUZZY.h  V4_FUZZY_private.h  V4_FUZZY_types.h  multiword_types.h  ros2nodeinterface.h  rtGetInf.h  rtGetNaN.h  rt_defines.h  rt_nonfinite.h  rtmodel.h  rtw_solver.h  rtwtypes.h  slros2_generic_pubsub.h  slros2_generic_service.h  slros2_initialize.h  slros_busmsg_conversion.cpp  visibility_control.h  zero_crossing_types.h
v4_fuzzy/src/: V4_FUZZY.cpp  V4_FUZZY_data.cpp  main.cpp  ros2nodeinterface.cpp  rtGetInf.cpp  rtGetNaN.cpp  rt_nonfinite.cpp  slros2_initialize.cpp
